# TosaToLinalg

./: .gitignore  CMakeLists.txt  README.md
include/: Passes.h
lib/: CMakeLists.txt  TosaToLinalgPass.cpp  TosaToLinalgPatterns.cpp  TosaToLinalgUtils.cpp
test/: add.mlir  debug.mlir  graph.mlir  matmul.mlir  metadata.mlir  mul.mlir
tools/: tosa-to-linalg-opt.cpp
